# insurance-agent-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py  worker.py
app/api/: dependencies.py  router.py
app/api/routes/: admin.py  auth.py  chat.py  config.py  conversations.py  health.py  knowledge_bases.py  metrics.py  tools.py
app/application/agent/: __init__.py  agents.py  business_tools.py  orchestrator.py  registry.py
app/application/auth/: __init__.py  service.py
app/application/chat/: __init__.py  service.py
app/application/documents/: __init__.py  ingestion.py
app/application/evaluation/: __init__.py  service.py
app/application/knowledge/: __init__.py  service.py
app/application/rag/: __init__.py  embedding.py  service.py
app/application/workflow/: __init__.py  engine.py
app/bootstrap/: __init__.py  container.py
app/core/: config.py  errors.py  logging.py  metrics.py  middleware.py  request_context.py  tracing.py
app/domain/: __init__.py  models.py  ports.py
app/infrastructure/: config_bus.py
app/infrastructure/embeddings/: __init__.py  factory.py  hash.py  openai_compatible.py
app/infrastructure/knowledge/: __init__.py  in_memory.py
app/infrastructure/model_clients/: __init__.py  factory.py  mock.py  openai_compatible.py
app/infrastructure/object_store/: __init__.py  factory.py  local.py  s3.py
app/infrastructure/persistence/: memory.py  sqlalchemy.py
app/infrastructure/rate_limit/: __init__.py  memory.py  redis.py
app/infrastructure/tasks/: __init__.py  factory.py  inline.py  redis.py
app/infrastructure/vector/: in_memory.py  qdrant.py
app/plugins/: __init__.py  base.py  insurance.py  registry.py
app/static/: index.html
app/static/prototype/: index.html
deploy/: prometheus.yml
docs/: BACKEND_GUIDE.zh-CN.md
evals/: dataset.jsonl
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: main.ts  router.ts  styles.css  types.ts
frontend/src/api/: client.ts
migrations/: README  env.py
migrations/versions/: 0001_initial.py  0002_platform_governance.py
outputs/: insurance-claims-service-guide.md
tests/: test_api.py
(+11 files in other folders)
