[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "insurance-agent-platform"
version = "0.1.0"
description = "Configurable, multi-tenant knowledge-base customer service Agent platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "openpyxl>=3.1,<4",
  "pypdf>=5,<7",
  "pydantic-settings>=2.6,<3",
  "python-docx>=1.1,<2",
  "python-multipart>=0.0.9,<1",
  "xlrd>=2.0,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "pytest-asyncio>=0.24,<1", "ruff>=0.8,<1"]
redis = ["redis>=5,<6"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["static/index.html", "static/prototype/index.html"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
